Fixes problem when running grunt and building with strict math. https://stackoverflow.com/questions/19705791/why-is-the-ceil-function-in-less-css-failing-for-font-calcuation https://github.com/less/less.js/issues/1259

--- a/tt/variables.less
+++ b/tt/variables.less
@@ -78,11 +78,11 @@
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          14px;
-@font-size-large:         ceil(@font-size-base * 1.25); // ~18px
-@font-size-small:         ceil(@font-size-base * 0.85); // ~12px
+@font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
+@font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
 @line-height-base:        1.714285714; // 24/14
-@line-height-computed:    floor(@font-size-base * @line-height-base); // ~24px
+@line-height-computed:    floor((@font-size-base * @line-height-base)); // ~24px
 
 @headings-font-family:    @font-family-base;
 @headings-font-weight:    400;
@@ -183,8 +183,8 @@
 @input-color-placeholder:        @gray-light;
 
 @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
-@input-height-large:             (floor(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2);
-@input-height-small:             (floor(@font-size-small * @line-height-small) + (@padding-small-vertical * 2) + 2);
+@input-height-large:             (floor((@font-size-large * @line-height-large)) + (@padding-large-vertical * 2) + 2);
+@input-height-small:             (floor((@font-size-small * @line-height-small)) + (@padding-small-vertical * 2) + 2);
 
 @legend-color:                   @gray-dark;
 @legend-border-color:            #e5e5e5;
@@ -282,7 +282,7 @@
 @navbar-default-bg:                #f8f8f8;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 @navbar-border-radius:             @border-radius-base;
-@navbar-padding-horizontal:        floor(@grid-gutter-width / 2);
+@navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 
 // Navbar links
